# Rust-Projects

chat/chat_server/src/: handler.rs
decorator/: Cargo.toml
decorator/examples/: dynamic_decorator.rs  static_decorator.rs
decorator/src/: cloth_entity.rs  decorator.rs  decorator_dyn.rs  lib.rs  plot_error.rs
patterns2/: Cargo.toml
patterns2/examples/: car.rs  plotter.rs
patterns2/src/: car_buider.rs  lib.rs  plotter_strategy.rs
smart_house2/: Cargo.toml
smart_house2/examples/: smart_house_demo.rs
smart_house2/src/: main.rs  smart_house.rs
smart_house2/src/devices/: device_info_providers.rs  smart_devices.rs
smart_house2_thiserror/: Cargo.toml
smart_house2_thiserror/src/: lib.rs  main.rs  smart_house.rs  tests_devices.rs
smart_house2_thiserror/src/devices/: device_info_providers.rs  mod.rs
tcp_socket/: Cargo.toml
tcp_socket/socket_client/: Cargo.toml
tcp_socket/socket_client/src/: main.rs
tcp_socket/socket_server/: Cargo.toml
tcp_socket/socket_server/src/: handler.rs  main.rs  smart_socket.rs
tcp_socket/stp/: Cargo.toml
tcp_socket/stp/src/: client.rs  server.rs
tcp_socket_async/socket_client/: Cargo.toml
tcp_socket_async/socket_client/src/: main.rs
tcp_socket_async/socket_server/: Cargo.toml
tcp_socket_async/stp/: Cargo.toml
udp_thermo/thermo_client/: Cargo.toml
udp_thermo/thermo_server/: Cargo.toml
udp_thermo_async/: Cargo.toml
udp_thermo_async/thermo_client/: Cargo.toml
udp_thermo_async/thermo_client/src/: main.rs
udp_thermo_async/thermo_server/: Cargo.toml
udp_thermo_async/thermo_server/src/: main.rs
(+4 files in other folders)
