[package]
name = "thermo_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["net", "macros", "rt", "fs", "sync", "rt-multi-thread", "io-util", "time"] }
futures = "0.3.30"
