[package]
name = "thermo_server"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.57"
rand = { version = "0.8.3", features = [] }
tokio = { version = "1.36.0", features = ["net", "macros", "rt", "fs", "sync", "rt-multi-thread", "io-util", "time"] }
